--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,17 +2,25 @@ exclude: '^docs/conf.py'
 
 repos:
 - repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v4.5.0
+  rev: v5.0.0
   hooks:
-  - id: trailing-whitespace
-  - id: end-of-file-fixer
   - id: check-yaml
+  - id: check-ast
+  - id: check-builtin-literals
   - id: check-added-large-files
-  - id: debug-statements
   - id: check-merge-conflict
+  - id: check-executables-have-shebangs
+  - id: check-merge-conflict
+  - id: debug-statements
+  - id: end-of-file-fixer
+  - id: forbid-new-submodules
+  - id: no-commit-to-branch
+  - id: requirements-txt-fixer
+  - id: trailing-whitespace
+
 
 - repo: https://github.com/psf/black
-  rev: 24.2.0
+  rev: 24.10.0
   hooks:
   - id: black
     language_version: python3.12
@@ -24,7 +32,7 @@ repos:
     args: ["--profile", "black"]
 
 - repo: https://github.com/pycqa/flake8
-  rev: 7.0.0
+  rev: 7.1.1
   hooks:
   - id: flake8
     args: [
